--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,5 +7,11 @@ copyedit: false
 last_tested: "2020-05-19"
 steps:
   - title: Introduction
-  - title: Step title
+  - title: Add a Ball sprite
+  - title: Add a face 
+  - title: Squish it
+  - title: Add a sound effect
+  - title: Challenge: Improve your stress ball
+  - title: Add a backdrop
+  - title: Add more stress toys
   - title: What next?
