--- a/en/meta.yml
+++ b/en/meta.yml
@@ -10,8 +10,9 @@ steps:
   - title: Add a Ball sprite
   - title: Add a face 
   - title: Squish it
+  - title: Shrink it
   - title: Add a sound effect
   - title: Challenge: Improve your stress ball
   - title: Add a backdrop
-  - title: Add more stress toys
+  - title: Improve your project
   - title: What next?
