--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,7 +12,7 @@ steps:
   - title: Squish it
   - title: Shrink it
   - title: Add a sound effect
-  - title: Challenge: Improve your stress ball
+  - title: 'Challenge: Improve your stress ball'
   - title: Add a backdrop
   - title: Improve your project
   - title: What next?
