--- a/en/meta.yml
+++ b/en/meta.yml
@@ -11,7 +11,7 @@ steps:
   - title: Add a face 
   - title: Squish it
   - title: Shrink it
-  - title: Add a sound effect
+  - title: Add a better sound effect
   - title: "Challenge: Improve your stress ball"
   - title: Add a backdrop
   - title: Improve your project
