Added challenge label to final step

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -14,5 +14,5 @@ steps:
   - title: Add a better sound effect
   - title: "Challenge: Improve your stress ball"
   - title: Add a backdrop
-  - title: Improve your project
+  - title: "Challenge: Improve your project"
   - title: What next?
