--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: Stress ball
 hero_image: images/banner.png
-description: stress-balls description
+description: Use Scratch to create a stress ball that you can squish!
 version: 4
 listed: false
 copyedit: false
