--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,5 +1,5 @@
 title: Stress ball
-hero_image: images/banner.png
+hero_image: images/stress-banner.png
 description: Use Scratch to create a stress ball that you can squish!
 version: 4
 listed: false
