--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,9 +2,9 @@ title: Stress ball
 hero_image: images/stress-banner.png
 description: Use Scratch to create a stress ball that you can squash!
 version: 4
-listed: false
-copyedit: false
-last_tested: "2020-05-19"
+listed: true
+copyedit: true
+last_tested: "2020-09-01"
 steps:
   - title: Introduction
   - title: Add a Ball sprite
