--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,7 +12,6 @@ steps:
   - title: Squash it
   - title: Shrink it
   - title: Add a better sound effect
-  - title: "Challenge: improve your stress ball"
   - title: Add a backdrop
-  - title: "Challenge: improve your project"
+  - title: Add more
   - title: What next?
