--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,17 +7,17 @@ copyedit: true
 last_tested: "2020-09-01"
 steps:
   - title: Introduction
-  - title: Add a Ball sprite
   - title: Draw a face
   - title: Squash it
   - title: Shrink it
   - title: Choose your own sound effect
   - title: Insert a backdrop
+  - title: Add another stress ball
   - title: Reflection
     knowledge_quiz:
       path: quiz1
       version: 1
       questions: 3
       passing_score: 3
-  - title: Add more
+  - title: Improve your stress balls
   - title: What next?
