--- a/en/meta.yml
+++ b/en/meta.yml
@@ -18,5 +18,5 @@ steps:
 - title: Add another stress ball
   completion:
   - internal
-- title: Improve your stress balls
-- title: What next?
+- title: Challenge
+- title: What can you do now?
