--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,16 +7,12 @@ listed: true
 copyedit: true
 last_tested: '2020-09-01'
 steps:
-- title: Introduction
-- title: Draw a face
-- title: Squash it
-  completion:
-  - engaged
-- title: Shrink it
-- title: Choose your own sound effect
-- title: Insert a backdrop
-- title: Add another stress ball
-  completion:
-  - internal
-- title: Challenge
-- title: What can you do now?
+  - title: What you will make
+  - title: Draw a face
+  - title: Squash it
+  - title: Shrink it
+  - title: Choose your own sound effect
+  - title: Insert a backdrop
+  - title: Add another stress ball
+  - title: CHallenge
+  - title: What can you do now?
