--- a/en/meta.yml
+++ b/en/meta.yml
@@ -7,12 +7,18 @@ listed: true
 copyedit: true
 last_tested: '2020-09-01'
 steps:
-  - title: What you will make
-  - title: Draw a face
-  - title: Squash it
-  - title: Shrink it
-  - title: Choose your own sound effect
-  - title: Insert a backdrop
-  - title: Add another stress ball
-  - title: CHallenge
-  - title: What can you do now?
+- title: What you will make
+- title: Draw a face
+  completion:
+  - engaged
+- title: Squash it
+- title: Shrink it
+- title: Choose your own sound effect
+- title: Insert a backdrop
+- title: Add another stress ball
+- title: Challenge
+  completion:
+  - internal
+- title: What can you do now?
+  completion:
+  - external
