--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,7 +2,7 @@
 title: Stress ball
 hero_image: images/stress-banner.png
 description: Use Scratch to create a stress ball that you can squash!
-pdf: rpfi-stress-ball
+pdf: resource/rpfi-stress-ball.pdf
 version: 4
 listed: true
 copyedit: true
